--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width" />
         <!--<link rel="stylesheet" type="text/css" href="css/global.css">-->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
             window.location = 'https://www.occus.mx/';
-        </script>
+        </script> --->
     </head>
     
     <body>
-        <!--<div class="content">
+        <div class="content">
             <div class="embed-container">
-                <object data="http://app.totalcontent.mx/"></object>
+                <!---<object data="http://app.totalcontent.mx/"></object>--->
+                <object data="https://www.occus.mx/"></object>
             </div>
-        </div>-->
+        </div>
     </body>
 </html>
