--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     </head>
     
     <body>
+        <h4> CORDOVA APPLICATION</h4>
+         <!---
         <div class="content">
             <div class="embed-container">
-                <!---<object data="http://app.totalcontent.mx/"></object>--->
+               <object data="http://app.totalcontent.mx/"></object>
                 <object data="https://www.occus.mx/"></object>
             </div>
-        </div>
+        </div>--->
     </body>
 </html>
