changes in var.

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                  }
              }
              function onDeviceReady() {
-
+               var ref = window.open ('https://www.occus.mx/', 'location=yes');
+            Ref.Show(); */
 
 
 
     window.open = cordova.InAppBrowser.open;
-
-    var windowref = window.open('http://app.totalcontent.mx/', '_blank', 'location=no'); */
-             var ref = window.open ('https://www.occus.mx/', 'location=yes');
-            Ref.Show();
+    var windowref = window.open('http://app.totalcontent.mx/'); 
+    windowref.open;     
+             
         </script> 
          <!---
 <h4> CORDOVA APPLICATION</h4>
